---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed that hidden planets were still shown (#410)

---------------------------------------------------------------------------------------------------
Version: 2.0.9
Date: 17. 11. 2024
  Changes:
    - Added a warning message when trying to use a recipe in an incompatible location (#393)
  Bugfixes:
    - Fixed that adding the same module, but of different quality would just drop one of them (#392)
    - Fixed that pasting a machine onto another one could leave it in a broken state (#383)
    - Fixed that pasting modules would not handle their quality correctly
    - Fixed a crash when trying to open the utility dialog without an associated player character
    - Fixed some modded beacons being over-permissive with what modules they support
    - Fixed some modded machines not allowing beacons even though they should
    - Fixed that Pyanodon's empty planter box recipe was detected as a barreling recipe (#406)

---------------------------------------------------------------------------------------------------
Version: 2.0.8
Date: 15. 11. 2024
  Features:
    - Added copy and put-into-cursor actions to district items
  Bugfixes:
    - Fixed a crash in the solver code (#405)
    - Fixed a crash when opening the utility dialog while in map view (#401)
    - Fixed a crash when trying to import recipe productivity recipes without a selected factory (#404)
    - Fixed a crash when trying to paste a recipe line on a subfloor (#403)

---------------------------------------------------------------------------------------------------
Version: 2.0.7
Date: 14. 11. 2024
  Bugfixes:
    - Fixed a couple of crashes when repairing very broken factories (#216)
    - Fixed that invalid modules weren't being filtered out properly (#320)
    - Fixed a crash when trying to open the calculator dialog