@@ -6,6 +6,7 @@ Date: 00. 00. 0000
   Changes:
     -
   Bugfixes:
+    - Fixed that the beacon dialog can't be confirmed (#409)
     - Fixed that hidden planets were still shown (#410)
 
 ---------------------------------------------------------------------------------------------------
